--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
 p {
   margin: 10px 0 !important;
 }
@@ -17,6 +22,22 @@ p {
   margin-right: 10px;
 }
 
-.img-small {
-  width: 180px !important;
+.profile-image {
+  width: 180px;
 }
+
+.story-table-row {
+  transition: 0.3s linear;
+}
+
+.wrapper {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* a {
+  color: black;
+  
+} */
