--- a/views/layouts/login.hbs
+++ b/views/layouts/login.hbs
@@ -14,14 +14,20 @@
 </head>
 
 <body>
-    <div class="container login-container">
-        <div class="card">
-            <div class="card-content">
-                {{{body}}}
+    <div class="wrapper">
+        <div class="container login-container">
+            <div class="card">
+                <div class="card-content">
+                    {{{body}}}
+                </div>
             </div>
         </div>
-
+        <footer class="white grey-text center page-footer">
+            <p>Code with &#128153; by Shubham Shukla</p>
+        </footer>
     </div>
+
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
