--- a/views/stories/index.hbs
+++ b/views/stories/index.hbs
@@ -1,8 +1,8 @@
-<h1>Stories</h1>
+<h4>Story Feed &#129299;</h4>
 <div class="row">
     {{#each stories}}
-    <div class="col s12 m4">
-        <div class="card">
+    <div class="col s12 m4 ">
+        <div class="card z-depth-3 hoverable ">
             <div class="card-image">
                 {{{editIcon user ../user _id }}}
             </div>
