--- a/views/stories/add.hbs
+++ b/views/stories/add.hbs
@@ -1,10 +1,9 @@
 <h3>Add Story</h3>
 <div class="row">
-    <form action="/stories/{{story._id}}" method="POST" class="col s12">
-        <input type="hidden" name="_method" value="PUT">
+    <form action="/stories" method="POST" class="col s12">
         <div class="row">
             <div class="input-field">
-                <input type="text" id="title" name="title" />
+                <input type="text" id="title" name="title" required>
                 <label for="title">Title</label>
             </div>
         </div>
@@ -21,14 +20,14 @@
 
         <div class="row">
             <div class="input-field">
-                <h5>Tell Us Your Story:</h5>
+                <h5>Tell us your story:</h5>
                 <textarea id="body" name="body"></textarea>
             </div>
         </div>
+
         <div class="row">
-            <input type="submit" value="Save" class="btn" />
+            <input type="submit" value="Save" class="btn">
             <a href="/dashboard" class="btn orange">Cancel</a>
         </div>
-
     </form>
 </div>
