--- a/views/stories/edit.hbs
+++ b/views/stories/edit.hbs
@@ -1,9 +1,10 @@
-<h3>Add Story</h3>
+<h3>Edit Story</h3>
 <div class="row">
-    <form action="/stories" method="POST" class="col s12">
+    <form action="/stories/{{story._id}}" method="POST" class="col s12">
+        <input type="hidden" name="_method" value="PUT">
         <div class="row">
             <div class="input-field">
-                <input type="text" id="title" name="title" value="{{story.title}}" />
+                <input type="text" id="title" name="title" value="{{story.title}}">
                 <label for="title">Title</label>
             </div>
         </div>
@@ -26,10 +27,10 @@
                 <textarea id="body" name="body">{{story.body}}</textarea>
             </div>
         </div>
+
         <div class="row">
-            <input type="submit" value="Save" class="btn" />
+            <input type="submit" value="Save" class="btn">
             <a href="/dashboard" class="btn orange">Cancel</a>
         </div>
-
     </form>
 </div>
