--- a/views/stories/show.hbs
+++ b/views/stories/show.hbs
@@ -1,9 +1,11 @@
+<link rel="stylesheet" type="text/css" href="css/style.css" />
+
 <div class="row">
     <div class="col s12 m8">
         <h3>{{story.title}}
             <small>{{{editIcon story.user user story._id false}}}</small>
         </h3>
-        <div class="card story">
+        <div class="card story r-class">
             <div class="card-content">
                 <span class="card-title">{{formatDate date 'Do MMMM YYYY, h:mm a'}}</span>
                 {{{story.body}}}
@@ -14,7 +16,7 @@
         <div class="card center-align">
             <div class="card-content">
                 <span class="card-title">{{story.user.displayName}}</span>
-                <img src="{{story.user.image}}" class="circle responsive-img img-small">
+                <img src="{{story.user.image}}" class="circle responsive-img profile-image" />
             </div>
             <div class="card-action">
                 <a href="/stories/user/{{story.user._id}}">More from {{story.user.firstName}}</a>
